--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,62 @@
-label{
-  font-family: 'Helvetica';
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#landscape{
+canvas {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+input, label {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#sky {
   background: linear-gradient(skyblue, white);
+  z-index: 0;
+}
+
+#water {
+  z-index: 1;
+}
+
+#landscape {
+  z-index: 2;
+}
+
+#controls {
+  position: absolute;
+  padding: 20px;
+  text-align: center;
+  z-index: 3;
+}
+
+.control {
+  display: inline-block;
+  padding: 5px 20px;
+  background-color: rgba(0,0,0,0.8);
+  border-radius: 20px;
+}
+
+#generateButton {
+  background-color: rgba(0,0,0,0.8);
+  border: none;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: bold;
+} #generateButton:hover {
+  background-color: black;
 }
